...
  state.routes.forEach((route: any, idx: number) => {
    if (route.name === 'AddItem') {
      newDescriptors[route.key] = {
        ...descriptors[route.key],
        options: {
          ...descriptors[route.key].options,
          tabBarButtonTestID: 'add-product-tab',
        },
      };
    }
  });
  
  return (
...
